--- a/ChallengeGame/Config/DefaultEngine.ini
+++ b/ChallengeGame/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/ChallengeGame/Maps/Level_Scene_01.Level_Scene_01
 GlobalDefaultGameMode=/Game/Code/Character/BP_ChallengeMode.BP_ChallengeMode_C
+EditorStartupMap=/Game/ChallengeGame/Maps/Level_Scene_01.Level_Scene_01
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
