--- a/Learn_VS/Config/DefaultEngine.ini
+++ b/Learn_VS/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
 EditorStartupMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+GlobalDefaultGameMode=/Game/MyProject/Gameplay/BP_MyGameMode.BP_MyGameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
