--- a/State_Core/Config/DefaultEngine.ini
+++ b/State_Core/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
 EditorStartupMap=/Game/ThirdPerson/Lvl_ThirdPerson.Lvl_ThirdPerson
-GlobalDefaultGameMode=/Game/Code/Character/BP_State_Core.BP_State_Core_C
+GlobalDefaultGameMode=/Game/Code/GameMode/Character_GameMode.Character_GameMode_C
 
 [/Script/Engine.RendererSettings]
 r.ReflectionMethod=1
@@ -81,7 +81,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
 bAllowNetworkConnection=True
-SecurityToken=55C385984FE9C6E53A7972A28A5DCA2B
+SecurityToken=74077E88467648AB45C7F6A137FA4749
 bIncludeInShipping=False
 bAllowExternalStartInShipping=False
 bCompileAFSProject=False
